08/22/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.1.2.2 'Vitari':
	- SHA-256 memory leak fixed.
	- Mobility ticket retransmission fixed.
	
08/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.1.2.1 'Vitari':
	- The origin attribute is verified in the subsequent 
	session messages (server flag --check-origin-consistency).
	- MySQL SSL connection support.
	- Crash fixed when the DB connection string is incorrect.
	- Minor docs fixes.
	
07/29/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.1.1.1 'Vitari':
	- Forceful server-side session cancellation implemented
	(in telnet console).
	
07/22/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.1.0.2 'Vitari':
	- SSODA (double allocation) draft support added.
	- DB "driver" abstraction and MongoDB support (by Federico Pinna).
	- multiple origins supported per request.
	- "allocation mismatch" condition fixed (merged from rfc5766-turn-server).
	- STUN BINDING response fixed in the case of -X (external address) option.
	- "pu" CLI command fixed.
	- session cleaning fixed in TCP relay functionality (RFC 6062).
	- some crash conditions fixed.
	- working on compilation warnings.

06/21/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.1.3 'Severard':
	- Redis DB connection status fixed (Issue 129).
	- Logfile reset on SIGHUP
	(Gustavo Garcia suggestion).
	- Log reset CLI command.
	- Some error code corrections:
	    * "Mobility forbidden" error changed, to value 405.
	    * "Wrong credentials" situation is now treated as error 441.

06/06/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.1.2 'Severard':
	- Bandwidth draft implemented.
	- Issues 126, 127 and 128 fixes merged from rfc5766-turn-server.

05/18/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.0.2 'Threetrees':
	- Code cleaning.
	
05/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.0.1 'Threetrees':
	- Kernel channel placeholder definitions.

05/02/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.0.0 'Threetrees':